fix: pages spacing containers too far from each other

--- a/lifters-shop/src/domain/retail/Retail.module.scss
+++ b/lifters-shop/src/domain/retail/Retail.module.scss
@@ -3,7 +3,6 @@
 .retail-advertisement-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
   gap: 9px;
   width: 100%;
@@ -27,6 +26,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  gap: 153px;
   background-color: var(--bs-white);
 }
